--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/among/">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/among/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/among/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/among/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/among/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/among/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/among/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/among/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/among/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/images/among/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/among/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/among/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/among/favicon-16x16.png">
-    <link rel="manifest" href="/images/among/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/icon/POOP.ico/">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/icon/POOP.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/icon/POOP.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/icon/POOP.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/icon/POOP.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/icon/POOP.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/icon/POOP.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/icon/POOP.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icon/POOP.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/icon/POOP.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon/POOP.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/icon/POOP.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icon/POOP.ico/favicon-16x16.png">
+    <link rel="manifest" href="/images/icon/POOP.ico/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/images/among/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/icon/POOP.ico/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
    <h1>My second class</h1> 
-   <img src="images/among/apple-icon-57x57.png" alt="this is cute" title="this is cute"/>
+   <img src="website/picture/IMG_8452.JPG" alt="this is cute" title="this is cute"/>
 </body>
 </html>
